# TinyMLTest

./: CMakeLists.txt  LICENSE  README.md  main.cpp
doc/: Assets.graffle  Doxyfile
kilib/: CMakeLists.txt
kilib/include/: Activation.hpp  CLayer.hpp  CNeuronalNet.hpp
kilib/src/: Activation.cpp  CLayer.cpp  CNeuronalNet.cpp
kilib/unittests/: CMakeLists.txt  UT_CLayer.cpp  UT_CNeuronalNet.cpp
tools/: CMakeLists.txt
tools/TestcaseGenerator/: CMakeLists.txt  TestcaseGenerator.cpp
tsunit/: CMakeLists.txt  TSUnit.cpp  TSUnit.hpp  TSUnitTestAddOns.cpp  TSUnitTestAddOns.hpp
utils/: CMakeLists.txt
utils/include/: CBLASMathDriver.hpp  CClassicMathDriver.hpp  CMath.hpp  CVector.hpp
utils/src/: CBLASMathDriver.cpp  CClassicMathDriver.cpp  CMath.cpp  CVector.cpp
utils/unittests/: CMakeLists.txt  UT_CClassicMathDriver.cpp  UT_CMath.cpp  UT_CVector.cpp
